--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -1,10 +1,47 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block title%}Sign In{% endblock %}
 
 {% block content %}
-<form method="post" enctype="multipart/form-data">
-    {{ login_form.as_p }}
-    {% csrf_token %}
-    <button type="submit">SignIn</button>
-</form>
+<div class="p-3 mb-2 text-white">
+    <div class="d-flex justify-content-center mt-5" id="sign">Log in</div>
+    <div class="container">
+        <div class="row text-center justify-content-center">
+            <div class="mb-3" id='sign_block'>
+                <form method="post" enctype="multipart/form-data">
+                    {{ login_form.as_p }}
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-success btn-lg px-5" id="bt">log in</button>
+                </form>
+            </div>
+        </div>
+
+    </div>
+    </div>
+    <div class="d-flex justify-content-center">
+        <div class="row text-center justify-content-center">
+            <div class="mb-3" id='create'>
+                <a class="btn btn-lg" href="register.html" role="button" id="cr">Create an account</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    let username_label = $("[for=\"id_username\"]")
+    username_label.addClass("form-label")
+
+    let username_input = $("[name=\"username\"]")
+    username_input.prop("placeholder", 'email')
+    username_input.addClass("form-control mx-auto")
+    
+    let password_label = $("[for=\"id_password\"]")
+    password_label.addClass("form-label")
+
+    let password_input = $("[name=\"password\"]")
+    password_input.prop("placeholder", 'password')
+    password_input.addClass("form-control mx-auto")
+</script>
+
 {% endblock %}
