--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1,10 +1,137 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block title%}Sign Up{% endblock %}
 {% block content %}
 
-<form method="post" enctype="multipart/form-data">
-    {{ registration_form.as_p }}
-    {% csrf_token %}
-    <button type="submit">SignUp</button>
-</form>
+<div class="d-flex justify-content-center mt-5" id="reg">Sign up</div>
+    <div class="container">
+        <div class="mb-3" id="reg_block">
+            <form class="row g-3" method="post" enctype="multipart/form-data">
+                    <div hidden>
+                        {{ registration_form.as_p }}
+                    </div>
+                    {% csrf_token %}
+                <div id="email"></div>
+                <div class="col-md-6" id="username"></div>
+                <div class="col-md-6" id="last_name"></div>
+                <div class="col-md-6" id="group"></div>
+                <div class="col-md-6" id="phone"></div>
+                <div class="col-md-6" id="password"></div>
+                <div class="col-md-6" id="password_confirm"></div>
+                <!-- <div class="col-md-6">
+                    <label for="" class="form-label">Select group</label>
+                    <select class="custom-select" id="gr">
+                        <option selected>AIN-1-21</option>
+                        <option value="1">AIN-2-21</option>
+                        <option value="2">AIN-3-21</option>
+                        <option value="3">MIN-21</option>
+                        <option value="3">WIN-21</option>
+                        <option selected>AIN-1-20</option>
+                        <option value="1">AIN-2-20</option>
+                        <option value="2">AIN-3-20</option>
+                        <option value="3">MIN-20</option>
+                        <option value="3">WIN-20</option>
+                        <option selected>AIN-1-19</option>
+                        <option value="1">AIN-2-19</option>
+                        <option value="2">AIN-3-19</option>
+                        <option value="3">MIN-19</option>
+                        <option value="3">WIN-19</option>
+                        <option selected>AIN-1-18</option>
+                        <option value="1">AIN-2-18</option>
+                        <option value="2">AIN-3-18</option>
+                        <option value="3">MIN-18</option>
+                        <option value="3">WIN-18</option>
+                    </select>
+                </div> -->
+                <div class="invalid-feedback" hidden>
+
+                </div>
+                <button class="btn btn-success btn-lg px-5" id="reg_btn" type="submit">Create an account</button>
+            </form>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div class="row text-center justify-content-center">
+                <div class="mb-3" id=''>
+                    <a class="btn" href="login.html" role="button" id="reg_btn">Log in</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+<script>
+    // labels
+    let email_label = $("[for=\"id_email\"]")
+    let username_label = $("[for=\"id_username\"]")
+    let last_name_label = $("[for=\"id_last_name\"]")
+    let group_label = $("[for=\"id_group\"]")
+    let phone_label = $("[for=\"id_phone\"]")
+    let password_label = $("[for=\"id_password\"]")
+    let password_cofirmation_label = $("[for=\"id_password_confirmation\"]")
+
+    // inputs
+    let email_input = $("#id_email")
+    let username_input = $("#id_username")
+    let last_name_input = $("#id_last_name")
+    let group_input = $("#id_group")
+    let phone_input = $("#id_phone")
+    let password_input = $("#id_password")
+    let password_cofirmation_input = $("#id_password_confirmation")
+
+    // divs
+    let email_div = $("#email")
+    let username_div = $("#username")
+    let last_name_div = $("#last_name")
+    let group_div = $("#group")
+    let phone_div = $("#phone")
+    let password_div = $("#password")
+    let password_confirm_div = $("#password_confirm")
+
+    // add labels to div
+    email_label.prependTo(email_div)
+    email_label.after(email_input)
+    username_label.prependTo(username_div)
+    username_label.after(username_input)
+    last_name_label.prependTo(last_name_div)
+    last_name_label.after(last_name_input)
+    group_label.prependTo(group_div)
+    group_label.after(group_input)
+    phone_label.prependTo(phone_div)
+    phone_label.after(phone_input)
+    password_label.prependTo(password_div)
+    password_label.after(password_input)
+    password_cofirmation_label.prependTo(password_confirm_div)
+    password_cofirmation_label.after(password_cofirmation_input)
+
+    // add class form-label
+    email_label.addClass("form-label")
+    username_label.addClass("form-label")
+    last_name_label.addClass("form-label")
+    group_label.addClass("form-label")
+    phone_label.addClass("form-label")
+    password_label.addClass("form-label")
+    password_cofirmation_label.addClass("form-label")
+
+    // add class form-control
+    email_input.addClass("form-control")
+    username_input.addClass("form-control")
+    last_name_input.addClass("form-control")
+    group_input.addClass("form-control")
+    phone_input.addClass("form-control")
+    password_input.addClass("form-control")
+    password_cofirmation_input.addClass("form-control")    
+
+    //errors
+    errors_div = $(".invalid-feedback")
+    console.log(errors_div)
+    errors = $(".errorlist")
+    if (errors.length){
+        errors_div.prop("hidden", false)
+        for (let count = 0; count != errors.length; count++){
+            console.log(errors.get(count))
+        }
+    }
+    
+</script>
 {% endblock %}
