--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -22,7 +22,7 @@
     <div class="d-flex justify-content-center">
         <div class="row text-center justify-content-center">
             <div class="mb-3" id='create'>
-                <a class="btn btn-lg" href="register.html" role="button" id="cr">Create an account</a>
+                <a class="btn btn-lg" href="{% url 'register' %}" role="button" id="cr">Create an account</a>
             </div>
         </div>
     </div>
