--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -53,7 +53,7 @@
         <div class="d-flex justify-content-center">
             <div class="row text-center justify-content-center">
                 <div class="mb-3" id=''>
-                    <a class="btn" href="login.html" role="button" id="reg_btn">Log in</a>
+                    <a class="btn" href="{% url 'login' %}" role="button" id="reg_btn">Log in</a>
                 </div>
             </div>
         </div>
