--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -4,29 +4,27 @@
 {% block title%}Sign In{% endblock %}
 
 {% block content %}
-<div class="p-3 mb-2 text-white">
-    <div class="d-flex justify-content-center mt-5" id="sign">Log in</div>
-    <div class="container">
+<div class="d-flex justify-content-center mt-5" id="sign">Log in</div>
+    <div class="container" style="max-width: 50%;">
         <div class="row text-center justify-content-center">
             <div class="mb-3" id='sign_block'>
                 <form method="post" enctype="multipart/form-data">
                     {{ login_form.as_p }}
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-success btn-lg px-5" id="bt">log in</button>
+                    <button type="submit" class="btn btn-primary btn-lg px-5" id="bt">log in</button>
                 </form>
             </div>
         </div>
 
-    </div>
-    </div>
-    <div class="d-flex justify-content-center">
-        <div class="row text-center justify-content-center">
-            <div class="mb-3" id='create'>
-                <a class="btn btn-lg" href="{% url 'register' %}" role="button" id="cr">Create an account</a>
+        <div class="d-flex justify-content-center">
+            <div class="row text-center justify-content-center">
+                <div class="mb-3" id='create'>
+                    <a class="btn btn-lg" href="{% url 'register' %}" role="button" id="cr">Create an account</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
 
 <script>
     let username_label = $("[for=\"id_username\"]")
