--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="d-flex justify-content-center mt-5" id="reg">Sign up</div>
-    <div class="container">
+    <div class="container" style="max-width: 50%;">
         <div class="mb-3" id="reg_block">
             <form class="row g-3" method="post" enctype="multipart/form-data">
                     <div hidden>
@@ -47,13 +47,13 @@
                 <div class="invalid-feedback" hidden>
 
                 </div>
-                <button class="btn btn-success btn-lg px-5" id="reg_btn" type="submit">Create an account</button>
+                <button class="btn btn-primary btn-lg px-5" id="reg_btn" type="submit">Create an account</button>
             </form>
         </div>
         <div class="d-flex justify-content-center">
             <div class="row text-center justify-content-center">
-                <div class="mb-3" id=''>
-                    <a class="btn" href="{% url 'login' %}" role="button" id="reg_btn">Log in</a>
+                <div class="mb-3" id='create'>
+                    <a class="btn btn-lg" href="{% url 'login' %}" role="button" id="cr">Log in</a>
                 </div>
             </div>
         </div>
