js and full html for login register

--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-center mt-5" id="sign">Log in</div>
-    <div class="container" style="max-width: 50%;">
+    <div class="container">
         <div class="row text-center justify-content-center">
             <div class="mb-3" id='sign_block'>
                 <form method="post" enctype="multipart/form-data">
