--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="d-flex justify-content-center mt-5" id="reg">Sign up</div>
-    <div class="container" style="max-width: 50%;">
+    <div class="container">
         <div class="mb-3" id="reg_block">
             <form class="row g-3" method="post" enctype="multipart/form-data">
                     <div hidden>
