js and full html for login register

--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -11,7 +11,7 @@
                 <form method="post" enctype="multipart/form-data">
                     {{ login_form.as_p }}
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-primary btn-lg px-5" id="bt">log in</button>
+                    <button type="submit" class="btn btn-primary btn-lg px-5 ml-3" id="bt">log in</button>
                 </form>
             </div>
         </div>
