--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -47,7 +47,7 @@
                 <div class="invalid-feedback" hidden>
 
                 </div>
-                <button class="btn btn-primary btn-lg px-5" type="submit">Create an account</button>
+                <button type="submit" class="btn btn-primary btn-lg px-5" id="bt" style="width: 98%; margin-left: 1%;">Create an account</button>
             </form>
         </div>
         <div class="d-flex justify-content-center">
