--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,41 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+    <div class="my-site pb-3 pt-3" id='header'>
+        <!--Общий блок-->
+        <div class="container">
+            <!--Блок с шириной 1140 px и выравнивается по центру-->
+            <div class="row">
+                <!--Ряд внутри которых нужно распологать колонки-->
+                <div class="col-md-2">
+                    <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'books' %}">Books</a>
+                </div>
+                <!--Колонка-->
+                {% if request.user.is_authenticated %}
+                    <div class="col-md-2">
+                        <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'orders' %}">Orders</a>
+                    </div>
+                {% endif %}
+                <!--Колонка-->
+                <div class="col-md-2"></div>
+                <div class="col-md-2"></div>
+                {% if request.user.is_authenticated %}
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2">
+                        <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'logout' %}">Log out</a>
+                    </div>
+                {% else %}
+                    <div class="col-md-2">
+                        <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'register' %}">Sign up</a>
+                    </div>
+                    <div class="col-md-2">
+                        <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'login' %}">Log in</a>
+                    </div>
+                {% endif %}
+                <!--Колонка-->
+            </div>
+        </div>
+    </div>
     {% block content %}{% endblock %}
     
     <!-- jquery -->
