--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,11 @@
                     <a class="btn btn-lg mx-auto mb-2" id="header_btn" href="{% url 'books' %}">Books</a> {% if request.user.is_authenticated %}
                     <a class="btn btn-lg mx-auto mb-2" id="header_btn" href="{% url 'orders' %}">Orders</a> {% endif %}
                 </div>
+                {% if request.user.group == 'admin' %}
+                <div class="col-md-2">
+                    <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'create-book' %}"><i class="far fa-plus-square"></i></a>
+                </div>
+                {% endif %}
                 {% if request.user.is_authenticated %}
                 <div class="col-4 gap-2 d-md-flex justify-content-md-end">
                     <a class="btn btn-lg float-right mb-2" id="header_btn" href="{% url 'logout' %}">Log out</a>
