--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                     <a class="btn btn-lg mx-auto mb-2" id="header_btn" href="{% url 'orders' %}">Orders</a> {% endif %}
                 </div>
                 {% if request.user.group == 'admin' %}
-                <div class="col-md-2">
+                <div class="col-4">
                     <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'create-book' %}"><i class="far fa-plus-square"></i></a>
                 </div>
                 {% endif %}
@@ -35,7 +35,7 @@
                     <a class="btn btn-lg float-right mb-2" id="header_btn" href="{% url 'logout' %}">Log out</a>
                 </div>
                 {% else %}
-                <div class="col-4 gap-2 d-md-flex justify-content-md-end">
+                <div class="col-4gap-2 d-md-flex justify-content-md-end">
                     <a class="btn mb-2 btn-lg float-right" id="header_btn" href="{% url 'register' %}">Sign up</a>
                     <a class="btn mb-2 btn-lg float-right" id="header_btn" href="{% url 'login' %}">Log in</a>
                 </div>
