--- a/templates/base.html
+++ b/templates/base.html
@@ -45,39 +45,10 @@
     </div>
     </div>
 
-    <!-- <div class="my-site pb-3 pt-3" id='header'>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2">
-                    <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'books' %}">Books</a>
-                </div>
-                {% if request.user.is_authenticated %}
-                <div class="col-md-2">
-                    <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'orders' %}">Orders</a>
-                </div>
-                {% endif %}
-                <div class="col-md-2"></div>
-                {% if request.user.group == 'admin' %}
-                <div class="col-md-2">
-                    <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'create-book' %}"><i class="far fa-plus-square"></i></a>
-                </div>
-                {% endif %} {% if request.user.is_authenticated %}
-                <div class="col-md-2"></div>
-                <div class="col-md-2">
-                    <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'logout' %}">Log out</a>
-                </div>
-                {% else %}
-                <div class="col-md-2">
-                    <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'register' %}">Sign up</a>
-                </div>
-                <div class="col-md-2">
-                    <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'login' %}">Log in</a>
-                </div>
-                {% endif %}
-            </div>
-        </div>
-    </div> -->{% block content %}{% endblock %}
+    {% block content %}{% endblock %}
 
+    <!-- axios -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
