--- a/templates/base.html
+++ b/templates/base.html
@@ -21,23 +21,23 @@
     <div class="my-site pb-3 pt-3" id="header">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-4 justify-content-between">
-                    <a class="btn btn-lg mx-auto mb-2" id="header_btn" href="{% url 'books' %}">Books</a> {% if request.user.is_authenticated %}
-                    <a class="btn btn-lg mx-auto mb-2" id="header_btn" href="{% url 'orders' %}">Orders</a> {% endif %}
+                <div class="col-4 justify-content-between header_div">
+                    <a class="btn btn-lg mx-auto mb-2 header_btn" href="{% url 'books' %}">Books</a> {% if request.user.is_authenticated %}
+                    <a class="btn btn-lg mx-auto mb-2 header_btn" href="{% url 'orders' %}">Orders</a> {% endif %}
                 </div>
                 {% if request.user.group == 'admin' %}
-                <div class="col-4">
-                    <a class="btn mb-2 btn-lg" id="header_btn" href="{% url 'create-book' %}"><i class="far fa-plus-square"></i></a>
+                <div class="col-4 header_div">
+                    <a class="btn mb-2 btn-lg header_btn" href="{% url 'create-book' %}"><i class="far fa-plus-square"></i></a>
                 </div>
                 {% endif %}
                 {% if request.user.is_authenticated %}
-                <div class="col-4 gap-2 d-md-flex justify-content-md-end">
-                    <a class="btn btn-lg float-right mb-2" id="header_btn" href="{% url 'logout' %}">Log out</a>
+                <div class="col-4 gap-2 d-md-flex justify-content-md-end header_div">
+                    <a class="btn btn-lg float-right mb-2 header_btn" href="{% url 'logout' %}">Log out</a>
                 </div>
                 {% else %}
-                <div class="col-4 gap-2 d-md-flex justify-content-md-end">
-                    <a class="btn mb-2 btn-lg float-right" id="header_btn" href="{% url 'register' %}">Sign up</a>
-                    <a class="btn mb-2 btn-lg float-right" id="header_btn" href="{% url 'login' %}">Log in</a>
+                <div class="col-4 gap-2 d-md-flex justify-content-md-end header_div">
+                    <a class="btn mb-2 btn-lg float-right header_btn" href="{% url 'register' %}">Sign up</a>
+                    <a class="btn mb-2 btn-lg float-right header_btn" href="{% url 'login' %}">Log in</a>
                 </div>
                 {% endif %}
             </div>
